# v2a_inspect

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yaml  pipeline_client.py  precommit.sh  pyproject.toml  requirements.txt  run.py  run.sh
docs/: agent_tool_contract.md  benchmark_video_samples_manifest.json  current_problem_2026-04-10.md  current_problem_2026-04-11.md  current_problem_2026-04-14.md  demo_guide.md  experiment_ledger_2026-04-10.md  external_review_challenges_2026-04-10.md  future_agentic_tooling_directions.md  mig_hot_benchmark_2026-04-11.md  mig_runtime_findings_2026-04-11.md  mig_stage_timing_2026-04-11.md  pipeline_improvement_plan.md  runtime_env.md  status_recap_2026-04-10.md  tooling_constraints.md
pipeline/: analyze_video_scenes.py  track_grouper.py
scripts/: forward_sogang_gpu.sh  run_video_samples_benchmark.py
server/: Dockerfile  README.md  model-manifest.json  pyproject.toml
server/scripts/: warmup_university_gpu.sh
server/src/v2a_inspect_server/: __init__.py  adjudicator.py  agentic.py  bootstrap.py  constants.py  crops.py  description_writer.py  descriptions.py  embeddings.py  execution.py  finalize.py  gemini_proposal_grounding.py  gemini_routing.py  gemini_source_proposal.py  gemini_source_semantics.py  gpu_runtime.py  image_features.py  label_vocabulary.py  model-manifest.json  model_runtime.py  reid.py  remote.py  runtime.py  sam3.py  scene_hypotheses.py  semantics.py  settings.py  source_ontology.py  telemetry.py  tool_context.py  tool_registry.py  tracking.py  validators.py
server/src/v2a_inspect_server/providers/: __init__.py  base.py  runpod.py
server/tests/: fakes.py  test_agentic.py  test_bootstrap.py  test_crop_evidence_flow.py  test_crops.py  test_execution.py  test_finalize.py  test_gpu_runtime.py  test_http_runtime.py  test_http_runtime_fakes.py  test_package_imports.py  test_providers.py  test_reid.py  test_remote.py  test_request_video_path.py  test_runtime_backends.py  test_runtime_cli.py  test_scene_hypotheses.py  test_semantics.py  test_server_package_imports.py  test_tool_context.py  test_tool_registry.py  test_tracking.py
tests/: test_benchmark_samples.py  test_bundle_adapters.py  test_contracts.py  test_dataset_export.py  test_evaluation.py  test_fake_runtime.py  test_gold_set_manifest.py  test_local_pipeline.py  test_openai_compat_llm.py  test_package_imports.py  test_prompt_evidence.py  test_review.py  test_runtime.py  test_server_client.py  (+8 more)
(+130 files in other folders)
