[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["v2a_inspect"]
module-root = "src"

[tool.uv-build]
include = ["src/v2a_inspect/prompt_templates/prompts/**/*.txt"]

[project]
name = "v2a-inspect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.68.0",
    "langchain>=1.2.12",
    "langgraph>=1.1.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "streamlit>=1.55.0",
    "streamlit-authenticator>=0.4.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyngrok>=7.5.1",
    "ruff>=0.15.6",
]
