[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["v2a_inspect_server"]
module-root = "src"

[project]
name = "v2a-inspect-server"
version = "0.1.0"
description = "Remote/server-side tooling for the v2a_inspect visual pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "huggingface-hub>=0.35.0",
  "pydantic>=2.12.5",
  "torch>=2.5.1,<2.6",
  "torchvision>=0.20.1,<0.21",
  "transformers>=4.48.0,<5",
  "v2a-inspect>=0.1.0",
]

[project.scripts]
v2a-inspect-server = "v2a_inspect_server.runtime:main"

[tool.uv.sources]
v2a-inspect = { path = ".." }
